fix: text align

--- a/css/style.css
+++ b/css/style.css
@@ -571,6 +571,7 @@ i {
 }
 
 .sign-up-para{
+  text-align: center;
   color:#737373;
 }
 
